RESOLVED FIXED243821
REGRESSION (iOS 16 Beta): camera resolution doesn't change when rotate the device and video sent with distorted aspect ratio
https://bugs.webkit.org/show_bug.cgi?id=243821
Summary REGRESSION (iOS 16 Beta): camera resolution doesn't change when rotate the de...
olena.bezkrovna
Reported 2022-08-11 04:11:47 PDT
Scenario: 1. join the call (e.g. google meets) 2. Rotate the device: When starting the camera in portrait mode the issue happens only for specific rotations: Front Camera clockwise - OK counterclockwise - the aspect ratio is broken Back Camera (vice versa): clockwise - the aspect ratio is broken counterclockwise - OK When starting the camera in landscape mode the issue may happen in portrait mode. Tested devices: - iPhone 12 mini | iOS 16 Beta - iPad 4th gen | iPadOS 16 Beta
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-11 17:25:55 PDT
youenn fablet
Comment 2 2022-08-16 03:25:59 PDT
EWS
Comment 3 2022-08-17 00:45:32 PDT
Committed 253509@main (e7501dd78e90): <https://commits.webkit.org/253509@main> Reviewed commits have been landed. Closing PR #3357 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.