Cherry-pick e7501dd78e90. rdar://problem/98539451

REGRESSION (iOS 16 Beta): camera resolution doesn't change when rotate the device and video sent with distorted aspect ratio
    https://bugs.webkit.org/show_bug.cgi?id=243821
    rdar://problem/98539451

    Reviewed by Eric Carlson.

    When using ImageRotationSessionVT with camera, we may use different rotation angles for the same session.
    We were not clearing the buffer pool we are using to optimize pixel buffer creation, leading to potentially wrong buffer size.
    We are now clearing the buffer pool everytime we initialize the ImageRotationSessionVT.

    Covered by API test.

    * Source/WebCore/platform/graphics/cv/ImageRotationSessionVT.mm:
    (WebCore::ImageRotationSessionVT::initialize):
    * Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    * Tools/TestWebKitAPI/Tests/WebCore/cocoa/ImageRotationSessionVT.cpp: Added.
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/253509@main

Canonical link: https://commits.webkit.org/252432.240@safari-7614-branch